--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "description": "---",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -21,6 +22,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
-    "moongoose": "^0.0.1"
+    "moongoose": "^0.0.1",
+    "socket.io": "^4.8.1"
   }
 }
